# params_tunner

./: .gitignore  README.md  index.html  package-lock.json  package.json
agent/: __init__.py  main.py  node_discovery.py  parameter_client.py  requirements.txt
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent_client.rs  lib.rs  main.rs  parameter_model.rs  yaml_exporter.rs
src/components/: ChangeIndicator.tsx  ExportDialog.tsx  NodeTree.tsx  ParameterEditor.tsx  ParameterGroup.tsx
src/hooks/: useParameterBackend.ts
src/styles/: app.css
