[package]
name = "ros2-param-tuner"
version = "0.1.0"
description = "ROS 2 Parameter Workbench"
authors = []
edition = "2021"

[lib]
name = "ros2_param_tuner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
